tests/paczka1/fuzzy1/15294523.err
Error in line 1: XyPRd9 S441 89,0
Error in line 2: XyPRd9 A442 76,3
Error in line 3: n13x6w A442 70,7
Error in line 4: XyPRd9 A555 43,8
Error in line 21: S441 A555 56,3
Error in line 13: CScmNFS A985 59,1
Error in line 24: CScmNFS A98 247,0
